--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "three": "^0.134.0",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^4.5.0",
     "webpack-merge": "^5.7.3"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.2"
   }
 }
