--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "ammo.js": "github:kripken/ammo.js",
+    "@enable3d/ammo-physics": "^0.23.0",
+    "@types/matter-js": "0.17.6",
+    "matter-js": "0.17.1",
+    "phaser": "^3.55.2",
+    "poly-decomp": "^0.3.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "dat.gui": "^0.7.7",
+    "enable3d": "^0.23.0",
     "file-loader": "^6.2.0",
     "gsap": "^3.8.0",
     "html-loader": "^1.3.2",
@@ -27,6 +31,7 @@
     "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^7.0.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
