--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@babel/preset-env": "^7.12.11",
     "@enable3d/ammo-physics": "^0.23.0",
     "@types/matter-js": "0.17.6",
-    "matter-js": "0.17.1",
-    "phaser": "^3.55.2",
-    "poly-decomp": "^0.3.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
@@ -20,7 +17,11 @@
     "gsap": "^3.8.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-alpha.7",
+    "lodash": "^4.17.21",
+    "matter-js": "0.17.1",
     "mini-css-extract-plugin": "^1.3.4",
+    "phaser": "^3.55.2",
+    "poly-decomp": "^0.3.0",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
     "stats.js": "^0.17.0",
